--- a/Online-food-shop/index.html
+++ b/Online-food-shop/index.html
@@ -65,8 +65,337 @@
 <!-- /Home -->
 
 <!-- About -->
+<div class="about" id="About">
+    <div class="about_main">
 
+        <div class="image">
+            <img src="./image/Food-Plate.png" alt="">
+        </div>
 
+        <div class="about_text">
+            <h1><span>About</span> Us</h1>
+            <h3>Why Choose us?</h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste repudiandae possimus ducimus 
+                repellendus, aperiam debitis modi doloremque incidunt.
+                 Numquam voluptatibus fugit iure odio facilis molestiae, laboriosam iste quo illum possimus.
+                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste repudiandae possimus ducimus 
+                 repellendus, aperiam debitis modi doloremque incidunt.
+                  Numquam voluptatibus fugit iure odio facilis molestiae, laboriosam iste quo illum possimus.
+                </p>
+            </div>
+        </div>
+        <a href="#" class="about_btn">Order Now</a>
+    </div>
+<!-- /About -->
+
+<!-- Menu -->
+<div class="menu" id="Menu">
+    <h1>Our<span>Menu</span></h1>
+
+    <div class="menu_box">
+        <div class="menu_card">
+
+            <div class="menu_image">
+                <img src="./image/buger.jpg" alt="Burger">
+            </div>
+
+            <div class="small_card">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+
+            <div class="menu_info">
+                <h2>Burger</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, placeat delectus
+                    incidunt vitae velit accusantium dolorem atque id aut. Numquam, pariatur minima?</p>
+                    <h3>$20.00</h3>
+                    <div class="menu_icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <a href="#" class="menu_btn">Order Now</a>
+            </div>
+        </div>
+        <div class="menu_card">
+
+            <div class="menu_image">
+                <img src="./image/pasta.jpg" alt="pasta">
+            </div>
+
+            <div class="small_card">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+
+            <div class="menu_info">
+                <h2>Pasta</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, placeat delectus
+                    incidunt vitae velit accusantium dolorem atque id aut. Numquam, pariatur minima?</p>
+                    <h3>$20.00</h3>
+                    <div class="manu_icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <a href="#" class="menu_btn">Order Now</a>
+            </div>
+        </div>
+        <div class="menu_card">
+
+            <div class="menu_image">
+                <img src="./image/chocolate_Drink.jpg" alt="Drink">
+            </div>
+
+            <div class="small_card">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+
+            <div class="menu_info">
+                <h2>Drink</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, placeat delectus
+                    incidunt vitae velit accusantium dolorem atque id aut. Numquam, pariatur minima?</p>
+                    <h3>$20.00</h3>
+                    <div class="manu_icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <a href="#" class="menu_btn">Order Now</a>
+            </div>
+        </div>
+        <div class="menu_card">
+
+            <div class="menu_image">
+                <img src="./image/pizza.jpg" alt="Pizza">
+            </div>
+
+            <div class="small_card">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+
+            <div class="menu_info">
+                <h2>Pizza</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, placeat delectus
+                    incidunt vitae velit accusantium dolorem atque id aut. Numquam, pariatur minima?</p>
+                    <h3>$20.00</h3>
+                    <div class="manu_icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <a href="#" class="menu_btn">Order Now</a>
+            </div>
+        </div>
+        <div class="menu_card">
+
+            <div class="menu_image">
+                <img src="./image/Hot_dog.jpg" alt="Hot_dog">
+            </div>
+
+            <div class="small_card">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+
+            <div class="menu_info">
+                <h2>Hot Dog</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, placeat delectus
+                    incidunt vitae velit accusantium dolorem atque id aut. Numquam, pariatur minima?</p>
+                    <h3>$20.00</h3>
+                    <div class="manu_icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <a href="#" class="menu_btn">Order Now</a>
+            </div>
+        </div>
+        <div class="menu_card">
+
+            <div class="menu_image">
+                <img src="./image/juse.jpg" alt="Juse">
+            </div>
+
+            <div class="small_card">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+
+            <div class="menu_info">
+                <h2>Juse</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, placeat delectus
+                    incidunt vitae velit accusantium dolorem atque id aut. Numquam, pariatur minima?</p>
+                    <h3>$20.00</h3>
+                    <div class="manu_icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <a href="#" class="menu_btn">Order Now</a>
+            </div>
+        </div>
+        <div class="menu_card">
+
+            <div class="menu_image">
+                <img src="./image/cake.jpg" alt="Cake">
+            </div>
+
+            <div class="small_card">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+
+            <div class="menu_info">
+                <h2>Cake</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, placeat delectus
+                    incidunt vitae velit accusantium dolorem atque id aut. Numquam, pariatur minima?</p>
+                    <h3>$20.00</h3>
+                    <div class="manu_icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <a href="#" class="menu_btn">Order Now</a>
+            </div>
+        </div>
+        <div class="menu_card">
+
+            <div class="menu_image">
+                <img src="./image/chocolate.jpg" alt="Chokolate">
+            </div>
+
+            <div class="small_card">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+
+            <div class="menu_info">
+                <h2>Chokolate</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, placeat delectus
+                    incidunt vitae velit accusantium dolorem atque id aut. Numquam, pariatur minima?</p>
+                    <h3>$20.00</h3>
+                    <div class="manu_icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <a href="#" class="menu_btn">Order Now</a>
+            </div>
+        </div>
+        <div class="menu_card">
+
+            <div class="menu_image">
+                <img src="./image/biryani.webp" alt="Burger">
+            </div>
+
+            <div class="small_card">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+
+            <div class="menu_info">
+                <h2>Biryani</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, placeat delectus
+                    incidunt vitae velit accusantium dolorem atque id aut. Numquam, pariatur minima?</p>
+                    <h3>$20.00</h3>
+                    <div class="manu_icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <a href="#" class="menu_btn">Order Now</a>
+            </div>
+        </div>
+        <div class="menu_card">
+
+            <div class="menu_image">
+                <img src="./image/ice_cream.jpg" alt="Burger">
+            </div>
+
+            <div class="small_card">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+
+            <div class="menu_info">
+                <h2>Ice cream</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, placeat delectus
+                    incidunt vitae velit accusantium dolorem atque id aut. Numquam, pariatur minima?</p>
+                    <h3>$20.00</h3>
+                    <div class="manu_icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <a href="#" class="menu_btn">Order Now</a>
+            </div>
+        </div>
+        <div class="menu_card">
+
+            <div class="menu_image">
+                <img src="./image/Spanchi.jpg" alt="Spanchi">
+            </div>
+
+            <div class="small_card">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+
+            <div class="menu_info">
+                <h2>Spanchi</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, placeat delectus
+                    incidunt vitae velit accusantium dolorem atque id aut. Numquam, pariatur minima?</p>
+                    <h3>$20.00</h3>
+                    <div class="manu_icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <a href="#" class="menu_btn">Order Now</a>
+            </div>
+        </div>
+        <div class="menu_card">
+
+            <div class="menu_image">
+                <img src="./image/sandwich.jpg" alt="Burger">
+            </div>
+
+            <div class="small_card">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+
+            <div class="menu_info">
+                <h2>Sandwich</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae, placeat delectus
+                    incidunt vitae velit accusantium dolorem atque id aut. Numquam, pariatur minima?</p>
+                    <h3>$20.00</h3>
+                    <div class="manu_icon">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                    <a href="#" class="menu_btn">Order Now</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
