--- a/Classlar..ES6/index.html
+++ b/Classlar..ES6/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Hello class</h1>
+    <div style=" display:flex; margin:10px; ">
+        <div id="square1"></div>
+        <div id="square2"></div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
