--- a/Classlar..ES6/index.html
+++ b/Classlar..ES6/index.html
@@ -11,6 +11,8 @@
     <div style=" display:flex; margin:10px; ">
         <div id="square1"></div>
         <div id="square2"></div>
+        <div id="circle1"></div>
+        <div id="circle2"></div>
     </div>
     <script src="./script.js"></script>
 </body>
